<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_margin="5dp"
    app:cardElevation="3dp"
    android:background="@color/white"
    app:cardCornerRadius="10dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical">

        <TextView
            android:id="@+id/task_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/task_id"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/task_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/task_id"
            android:fontFamily="@font/montserrat"
            android:text="@string/task_name"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/task_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/task_name"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/task_id"
            android:fontFamily="@font/montserrat"
            android:text="@string/task_place"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />


        <View
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:shadowColor="@color/colorPrimary"
            android:layout_below="@id/task_place"
            />

    </RelativeLayout>


</androidx.cardview.widget.CardView>