<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/addTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/montserrat"
        android:hint="@string/add_text"
        android:inputType="textShortMessage"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/addPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/montserrat"
        android:hint="@string/add_place"
        android:inputType="textShortMessage"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="25sp" />

    <Button
        android:id="@+id/add_note_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/add_button_background"
        android:elevation="10dp"
        android:fontFamily="@font/montserrat"
        android:padding="10dp"
        android:text="@string/add_button_text"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notes_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:scrollbars="vertical" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/delete_note_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/modify_note_section"
            android:orientation="horizontal"
            android:padding="10dp">


            <EditText
                android:id="@+id/delete_by_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_background"
                android:fontFamily="@font/montserrat"
                android:hint="@string/todo_id"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="20dp"
                android:background="@drawable/edit_delete_buttons_background"
                android:contentDescription="@string/delete_button_description"
                android:padding="10dp"
                app:srcCompat="@drawable/ic_delete_black_24dp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/modify_note_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="10dp">


            <EditText
                android:id="@+id/modify_note"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_background"
                android:fontFamily="@font/montserrat"
                android:hint="@string/modify_note"
                android:inputType="textShortMessage"
                android:maxLines="2"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/edit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/edit_delete_buttons_background"
                android:contentDescription="@string/modify_note"
                android:padding="10dp"
                app:srcCompat="@drawable/ic_create_black_24dp" />
        </LinearLayout>

    </RelativeLayout>


</LinearLayout>



